<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.notesapp.R" />

        <variable
            name="vm"
            type="com.example.notesapp.viewmodel.AddRecipeVM" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:visibility="visible">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:menu="@menu/menu_recipe_list"
                    app:navigationIcon="@drawable/ic_back_blue"
                    app:title="@string/add_recipe_toolbar_tittle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@drawable/divider_pink_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/medium_gap"
                    android:layout_marginEnd="@dimen/medium_gap"
                    android:orientation="vertical"
                    app:visible_or_gone="@{!vm.loading}"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_recipe_name_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={vm.name}" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_recipe_info_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={vm.info}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txt_ingredients_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/large_gap"
                        android:text="@string/add_recipe_ingredients_label"
                        android:textAppearance="@style/Text.RobotoBold.Blue.18" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_gap"
                        android:paddingLeft="@dimen/medium_gap"
                        android:paddingRight="@dimen/medium_gap"
                        app:itemLayoutId="@{R.layout.item_add_ingredient}"
                        app:items="@{vm.ingredients}"
                        app:viewModel="@{vm}" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_gap"
                        android:hint="@string/add_recipe_ingredient_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_ingredient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={vm.newIngredient}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rectangle_rounded_pink"
                        android:drawableStart="@drawable/ic_add_small"
                        android:onClick="@{()-> vm.onIngredientAdded()}"
                        android:text="@string/add" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_recipe_description_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={vm.description}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_recipe_duration_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={vm.duration}" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:layout_width="@dimen/progress_size"
                android:layout_height="@dimen/progress_size"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                app:visible_or_gone="@{vm.loading}" />

        </FrameLayout>

    </ScrollView>

</layout>